@@ -12,18 +12,19 @@ import javax.inject.Inject;
 
 public class Init extends Command {
 
-
+    public WorkingDirectory wd = WorkingDirectory.getInstance();
+    
     @Override
     public void execute(String... args) {
         try {
-            super.wd.setPath(Path.of("."));
-            if (Files.exists(Paths.get(".jgit"))) {
-                System.out.println("A .jgit file already exists!");
+            String path = (args.length == 1) ? "." : args[1];
+
+            wd.setPath(Path.of(path));
+            Path newPath = wd.getPath(".jgit");
+            if(Files.exists(newPath)) {
+                System.out.println("There is already a .jgit directory.");
                 return;
             }
-            Path newPath = wd.getPath(".jgit");
-
-
             Files.createDirectories(newPath);
             newPath = wd.getPath(".jgit", "object");
             Files.createDirectories(newPath);
